--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,7 +12,7 @@ passlib>=1.7.4           # compatible with Python 3.11+
 bcrypt>=4.0.1
 
 # PDF and OCR related
-pdf-lib>=1.17.1          # if used
+pypdf>=3.16.0
 pdfplumber>=0.9.0
 
 # MongoDB
