--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,31 +1,23 @@
-# Core dependencies
-fastapi>=0.95.2
-uvicorn>=0.22.0
-python-multipart>=0.0.6
-pillow>=9.5.0
-pytesseract>=0.3.10
-PyMuPDF>=1.25.0          # compatible with Python 3.11+
-transformers>=4.35.0
-torch>=2.1.0
-python-jose>=3.3.0
-passlib>=1.7.4           # compatible with Python 3.11+
-bcrypt>=4.0.1
+# Web framework
+fastapi==0.118.0
+uvicorn==0.22.0
 
-# PDF and OCR related
-pypdf>=3.16.0
-pdfplumber>=0.9.0
+# File uploads and PDF/image processing
+python-multipart==0.0.20
+pillow==11.3.0
+PyMuPDF==1.26.4
+pytesseract==0.3.13
+numpy==2.2.6
 
-# MongoDB
-pymongo>=4.3.3
+# Deep learning and NLP
+torch==2.8.0
+transformers==4.57.0
 
-# AI/Generative packages
-google-generativeai>=0.2.0
-protobuf>=3.20.3,<5.0.0   # compatible with google-generativeai
+# HTTP requests
+requests==2.32.5
 
-# Utilities
-requests>=2.31.0
-opencv-python>=4.7.0.72   # compatible with Python 3.11+
-opencv-contrib-python>=4.7.0.72
-
-# Optional CLI / helpers
-typer>=0.9.0
+# Optional (install only if you use these features)
+spacy==3.8.0          # NLP tasks
+opencv-python==4.12.0 # Image processing
+deep-translator==1.11 # Translation
+google-generativeai==0.8.5 # Google GenAI API
