--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,5 +21,5 @@ spacy==3.8.0          # NLP tasks
 opencv-python==4.12.0 # Image processing
 deep-translator==1.11 # Translation
 google-generativeai==0.8.5 # Google GenAI API
-opencv-python==4.11.0.86
-opencv-contrib-python==4.11.0.86
+opencv-python
+opencv-contrib-python
