--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,25 +1,14 @@
-# Web framework
-fastapi==0.118.0
-uvicorn==0.22.0
-
-# File uploads and PDF/image processing
-python-multipart==0.0.20
-pillow==11.3.0
-PyMuPDF==1.26.4
-pytesseract==0.3.13
-numpy==2.2.6
-
-# Deep learning and NLP
-torch==2.8.0
-transformers==4.57.0
-
-# HTTP requests
-requests==2.32.5
-
-# Optional (install only if you use these features)
-spacy==3.8.0          # NLP tasks
-opencv-python==4.12.0 # Image processing
-deep-translator==1.11 # Translation
-google-generativeai==0.8.5 # Google GenAI API
-opencv-python
-opencv-contrib-python
+fastapi>=0.118.0
+uvicorn>=0.37.0
+python-multipart>=0.0.20
+pillow>=11.3.0
+pytesseract>=0.3.13
+PyMuPDF>=1.26.4
+transformers>=4.57.0
+torch>=2.8.0
+spacy>=3.5.3
+deep-translator>=1.11.1
+opencv-python==4.12.0
+numpy>=1.26.4
+google-generativeai>=0.8.5
+requests>=2.32.5
