--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,15 @@
-fastapi>=0.118.0
-uvicorn>=0.37.0
-python-multipart>=0.0.20
-pillow>=11.3.0
-pytesseract>=0.3.13
-PyMuPDF>=1.26.4
-transformers>=4.57.0
-torch>=2.8.0
-spacy>=3.5.3
-deep-translator>=1.11.1
-opencv-python==4.12.0.88
-numpy>=1.26.4
-google-generativeai>=0.8.5
-requests>=2.32.5
+fastapi==0.118.0
+uvicorn==0.37.0
+python-multipart==0.0.20
+pillow==11.3.0
+pytesseract==0.3.13
+PyMuPDF==1.26.4
+transformers==4.57.0
+torch==2.3.1
+spacy==3.7.4
+deep-translator==1.11.4
+opencv-python-headless==4.12.0.88
+numpy==1.26.4
+google-generativeai==0.8.5
+requests==2.32.5
+en-core-web-sm
