--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+
 # Web framework & API
 fastapi==0.118.0
 uvicorn==0.37.0
@@ -22,3 +23,4 @@ google-generativeai==0.8.5
 
 # Optional (if you use async typing features)
 typing-extensions==4.15.0
+python -m spacy download en_core_web_sm
